--- a/inventory-details.html
+++ b/inventory-details.html
@@ -23,6 +23,7 @@
     <link rel="preload" href="./styles/_base-tailwind.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="stylesheet" href="./styles/_tailwind.css">
     <link rel="stylesheet" href="./styles/_theme.css">
+    <link rel="preload" href="./styles/ui/_active.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <!-- <link rel="preload" href="./styles/about/_style.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> -->
     <!-- BOOTSTRAP 5 CSS -->
     <link rel="preload" href="./styles/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -584,7 +585,7 @@
                           </small>
                         </div>
                         <div class="col d-flex flex-column align-items-end">
-                          <button class="rounded-pill border h-10 w-10 p-2" aria-label="add to favourite">
+                          <button class="rounded-pill border h-10 w-10 p-2" aria-label="add to favorite">
                             <i class="far fa-heart text-secondary"></i>
                           </button>
                           <small class="text-secondary">
@@ -645,7 +646,7 @@
                           </small>
                         </div>
                         <div class="col d-flex flex-column align-items-end">
-                          <button class="rounded-pill border h-10 w-10 p-2" aria-label="add to favourite">
+                          <button class="rounded-pill border h-10 w-10 p-2" aria-label="add to favorite">
                             <i class="far fa-heart text-secondary"></i>
                           </button>
                           <small class="text-secondary">
@@ -706,7 +707,7 @@
                           </small>
                         </div>
                         <div class="col d-flex flex-column align-items-end">
-                          <button class="rounded-pill border h-10 w-10 p-2" aria-label="add to favourite">
+                          <button class="rounded-pill border h-10 w-10 p-2" aria-label="add to favorite">
                             <i class="far fa-heart text-secondary"></i>
                           </button>
                           <small class="text-secondary">
@@ -767,7 +768,7 @@
                           </small>
                         </div>
                         <div class="col d-flex flex-column align-items-end">
-                          <button class="rounded-pill border h-10 w-10 p-2" aria-label="add to favourite">
+                          <button class="rounded-pill border h-10 w-10 p-2" aria-label="add to favorite">
                             <i class="far fa-heart text-secondary"></i>
                           </button>
                           <small class="text-secondary">
@@ -827,7 +828,7 @@
                           </small>
                         </div>
                         <div class="col d-flex flex-column align-items-end">
-                          <button class="rounded-pill border h-10 w-10 p-2" aria-label="add to favourite">
+                          <button class="rounded-pill border h-10 w-10 p-2" aria-label="add to favorite">
                             <i class="far fa-heart text-secondary"></i>
                           </button>
                           <small class="text-secondary">
