sidebar menu & favorite list fixed

--- a/inventory-details.html
+++ b/inventory-details.html
@@ -23,6 +23,7 @@
     <link rel="preload" href="./styles/_base-tailwind.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="stylesheet" href="./styles/_tailwind.css">
     <link rel="stylesheet" href="./styles/_theme.css">
+    <link rel="stylesheet" href="./styles/ui/_animations.css">
     <link rel="preload" href="./styles/ui/_active.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <!-- <link rel="preload" href="./styles/about/_style.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> -->
     <!-- BOOTSTRAP 5 CSS -->
@@ -249,7 +250,7 @@
 
       <!--* INVENTORY CHARACTERESTICS *-->
       <section id="inventoryDetails__characters" class="container-fluid mt-12">
-        <div class="container">
+        <div class="container slideBottom">
 
           <div class="bg-gray-100 border py-6 px-10">
             <!--* characteristics *-->
@@ -264,7 +265,7 @@
               </div>
               <!--? Transmission -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/2.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/2.png" alt="Transmission">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">Transmission</span>
                   <span class="text-sm font-semibold">Automatic</span>
@@ -272,7 +273,7 @@
               </div>
               <!--? Engine -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/5.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/5.png" alt="Engine">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">Engine</span>
                   <span class="text-sm font-semibold">6.7L Power</span>
@@ -280,7 +281,7 @@
               </div>
               <!--? MPG -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/7.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/7.png" alt="MPG">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">MPG</span>
                   <span class="text-sm font-semibold">-</span>
@@ -288,7 +289,7 @@
               </div>
               <!--? Body Style -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/9.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/9.png" alt="Body Style">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">Body Style</span>
                   <span class="text-sm font-semibold">Pickup</span>
@@ -296,7 +297,7 @@
               </div>
               <!--? Fuel Type -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/11.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/11.png" alt="Fuel Type">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">Fuel Type</span>
                   <span class="text-sm font-semibold">-</span>
@@ -304,7 +305,7 @@
               </div>
               <!--? Door -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/3.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/3.png" alt="Door">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">Door</span>
                   <span class="text-sm font-semibold">4 Doors</span>
@@ -312,7 +313,7 @@
               </div>
               <!--? DriveTrain -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/4.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/4.png" alt="Drivetrain">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">Drivetrain</span>
                   <span class="text-sm font-semibold">4WD</span>
@@ -320,7 +321,7 @@
               </div>
               <!--? Mileage -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/6.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/6.png" alt="Mileage">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">Mileage</span>
                   <span class="text-sm font-semibold">105,260 Miles</span>
@@ -328,7 +329,7 @@
               </div>
               <!--? Seat -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/8.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/8.png" alt="Seat">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">Seat</span>
                   <span class="text-sm font-semibold">-</span>
@@ -336,7 +337,7 @@
               </div>
               <!--? Interior -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/10.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/10.png" alt="Interior">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">Interior</span>
                   <span class="text-sm font-semibold">Adobe</span>
@@ -344,7 +345,7 @@
               </div>
               <!--? Trim -->
               <div class="flex my-3">
-                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/12.png" alt="exterior">
+                <img class="w-10 object-contain" width="50" height="50" src="./images/icon/inventory/12.png" alt="Trim">
                 <div class="flex flex-col items-start pl-6">
                   <span class="text-sm">Trim</span>
                   <span class="text-sm font-semibold">Platinum TEXAS</span>
@@ -397,7 +398,7 @@
       </section>
 
       <section id="inventoryDetails__description" class="container-fluid mt-12">
-        <div class="container">
+        <div class="container slideBottom">
           <ul class="nav nav-pills nav-fill" id="pills-tab-desc" role="tablist">
             <li class="nav-item mr-1" role="presentation">
               <button class="nav-link active rounded-0 py-4 text-lg font-bold uppercase bg-gray-100" id="pills-desc-tab" data-bs-toggle="pill" data-bs-target="#pills-desc" type="button" role="tab" aria-controls="pills-desc" aria-selected="true">DESCRIPTION</button>
@@ -425,7 +426,7 @@
       
       <!--* INVENTORY CALCULATOR *-->
       <section id="inventoryDetails__calculator" class="container-fluid mt-12">
-        <div class="container">
+        <div class="container slideBottom">
           <ul class="nav nav-pills" id="pills-tab-desc" role="tablist">
             <li class="nav-item mr-1" role="presentation">
               <button class="nav-link active rounded-0 py-4 text-lg font-bold uppercase bg-gray-100" id="pills-calculator-tab" data-bs-toggle="pill" data-bs-target="#pills-calculator" type="button" role="tab" aria-controls="pills-calculator" aria-selected="true">financing calculator</button>
@@ -557,7 +558,7 @@
               </div>
             </div>
             
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper slideBottom">
               <!-- swiper slide 1 -->
               <div class="swiper-slide">
                 <!-- card col -->
@@ -1084,6 +1085,8 @@
     </script> -->
 
 
+    <!-- SCROLL ANIMATIONS -->
+    <script src="./js/ui/animation-scroll.js"></script>
     <!-- INVENTORY DETAILS SCRIPT -->
     <script src="./js/inventory/inventory-details.js"></script>
     <!-- FONT AWESOME ICONS -->
